force-app/main/default/objects/Signal__c/Signal__c.object-meta.xml
<CustomObject>
    <description>Signals, a pivotal Salesforce object, functions as an early-warning system for potential sales opportunities. It intelligently tracks key indicators, offering predictive insights to guide strategic decision-making. Designed to streamline prospect identification, Signals equips sales teams with actionable intelligence, enabling proactive engagement and maximizing conversion chances.</description>
    <label>Signal</label>
    <nameField>
        <label>Signal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>