force-app/main/default/objects/Signal__c/fields/AccountOwnerForm__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerForm__c</fullName>
    <formula>AccountRef__r.Owner.FullNameForm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>