force-app/main/default/objects/Signal__c/fields/AccountPlanRef__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>.</description>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Signals</relationshipLabel>
    <relationshipName>Signals</relationshipName>
    <type>Lookup</type>
</CustomField>