force-app/main/default/objects/Signal__c/fields/ContactRef__c.field-meta.xml
<CustomField>
    <fullName>ContactRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that provided the signal. Outside of the Heijmans organization.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Signals</relationshipLabel>
    <relationshipName>Signals</relationshipName>
    <type>Lookup</type>
</CustomField>