force-app/main/default/objects/Signal__c/fields/ExpectedChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedChangeDate__c</fullName>
    <description>This field can be used to give an estimation of the expected date of change.</description>
    <label>Expected Change Date</label>
    <type>Date</type>
</CustomField>