force-app/main/default/objects/Signal__c/fields/ExpectedStatusChange__c.field-meta.xml
<CustomField>
    <fullName>ExpectedStatusChange__c</fullName>
    <description>This field can be used to give an estimation of the expected date of change.</description>
    <label>Expected Status Change</label>
    <type>Date</type>
</CustomField>