force-app/main/default/objects/Signal__c/fields/MonthsLastModifiedForm__c.field-meta.xml
<CustomField>
    <fullName>MonthsLastModifiedForm__c</fullName>
    <description>Calculates the difference in months since date last modified.</description>
    <formula>MONTH(TODAY()) + (12*(YEAR(TODAY())- YEAR(DATEVALUE(LastModifiedDate)))) - MONTH(DATEVALUE(LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Last Modified</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>