force-app/main/default/objects/Signal__c/fields/OpportunityRef__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field to Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Signals</relationshipLabel>
    <relationshipName>Signals</relationshipName>
    <type>Lookup</type>
</CustomField>