force-app/main/default/objects/Signal__c/fields/ParentSignalRef__c.field-meta.xml
<CustomField>
    <fullName>ParentSignalRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Is there a signal that is a parent of this signal record?</description>
    <label>Parent Signal</label>
    <referenceTo>Signal__c</referenceTo>
    <relationshipLabel>Signals</relationshipLabel>
    <relationshipName>Signals</relationshipName>
    <type>Lookup</type>
</CustomField>