force-app/main/default/objects/Signal__c/fields/PartnershipRef__c.field-meta.xml
<CustomField>
    <fullName>PartnershipRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will create a lookup between the objects Signal and Partnership.</description>
    <label>Partnership</label>
    <referenceTo>Partnership__c</referenceTo>
    <relationshipLabel>Signals</relationshipLabel>
    <relationshipName>Signals</relationshipName>
    <type>Lookup</type>
</CustomField>