force-app/main/default/objects/Signal__c/fields/SetSignalReminderPick__c.field-meta.xml
<CustomField>
    <fullName>SetSignalReminderPick__c</fullName>
    <description>This field shows the values to pick a reminder date.</description>
    <inlineHelpText>What period in advance should the account team be notified based on the expected change date?</inlineHelpText>
    <label>Set Signal Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One month</fullName>
                <default>true</default>
                <label>One month</label>
            </value>
            <value>
                <fullName>Two months</fullName>
            </value>
            <value>
                <fullName>Three months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>