force-app/main/default/objects/Signal__c/fields/SourcePick__c.field-meta.xml
<CustomField>
    <fullName>SourcePick__c</fullName>
    <description>This vield will show the Source of the Signal.</description>
    <inlineHelpText>Select the Source of your Signal.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conversation</fullName>
            </value>
            <value>
                <fullName>Newspaper article</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>