force-app/main/default/objects/Signal__c/fields/SourceURL__c.field-meta.xml
<CustomField>
    <fullName>SourceURL__c</fullName>
    <description>This field will show the URL of the Signal.</description>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>