force-app/main/default/objects/Signal__c/fields/StatusPick__c.field-meta.xml
<CustomField>
    <fullName>StatusPick__c</fullName>
    <description>This field will show the status of the Signal.</description>
    <inlineHelpText>Welke status heeft dit signaal?</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waarde 1</fullName>
            </value>
            <value>
                <fullName>Waarde 2</fullName>
            </value>
            <value>
                <fullName>Waarde 3</fullName>
            </value>
            <value>
                <fullName>Create Opportunity</fullName>
                <isActive>false</isActive>
                <label>Create Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>