force-app/main/default/objects/Signal__c/listViews/Al_mijn_signalen_aankomende_3_maanden.listView-meta.xml
<ListView>
    <fullName>Al_mijn_signalen_aankomende_3_maanden</fullName>
    <columns>NAME</columns>
    <columns>StatusPick__c</columns>
    <columns>SourcePick__c</columns>
    <columns>PartnershipRef__c</columns>
    <columns>AccountRef__c</columns>
    <columns>ExpectedStatusChange__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ExpectedStatusChange__c</field>
        <operation>equals</operation>
        <value>NEXT_90_DAYS</value>
    </filters>
    <label>Al mijn signalen aankomende 3 maanden</label>
</ListView>