force-app/main/default/objects/Signal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StatusPick__c</columns>
    <columns>SourcePick__c</columns>
    <columns>PartnershipRef__c</columns>
    <columns>AccountRef__c</columns>
    <columns>ExpectedChangeDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>