force-app/main/default/objects/Signal__c/listViews/Mijn_Signalen.listView-meta.xml
<ListView>
    <fullName>Mijn_Signalen</fullName>
    <columns>NAME</columns>
    <columns>AccountRef__c</columns>
    <columns>PartnershipRef__c</columns>
    <columns>StatusPick__c</columns>
    <columns>SourcePick__c</columns>
    <columns>ExpectedStatusChange__c</columns>
    <columns>SetSignalReminderPick__c</columns>
    <columns>ExpectedChangeDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mijn Signalen</label>
</ListView>